NOW fixed background color on mobile

--- a/beta/binary.css
+++ b/beta/binary.css
@@ -7,6 +7,8 @@
     -webkit-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
+
+    background-color: #333;
 }
 
 .world-container
@@ -87,8 +89,4 @@ html,body
 
 .middle-half {
     z-index: 1000;
-}
-
-.dark-bg {
-    background-color: #333;
 }
